--- a/chendian/templates/page.html
+++ b/chendian/templates/page.html
@@ -1,6 +1,8 @@
 {% load extra_tags %}
 
 {% if is_paginated %}
+<div class="row">
+
 <ul class="pagination">
   {% if page_obj.has_previous %}
   <li class="arrow"><a href="{% page_url page_obj.previous_page_number %}">&laquo;</a></li>
@@ -20,5 +22,6 @@
   {% endif %}
 
 </ul>
-{% endif %}
 
+</div>
+{% endif %}
