--- a/chendian/templates/qq/analysis/group_by_sn.html
+++ b/chendian/templates/qq/analysis/group_by_sn.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load extra_tags %}
 
 {% block title %}打卡次数 - {{ super }} {% endblock title %}
 
 {% block content %}
-  <h1>打卡记录</h1>
+  <h1>按编号分组</h1>
 
 
   <div class="row">
@@ -67,17 +68,26 @@
 <table class="full-width">
   <thead>
     <tr>
-      <th style="width: 30%">编号</th>
+      <th style="width: 20%">编号</th>
+      <th style="width: 20%">QQ</th>
       <th style="width: 40%">昵称</th>
-      <th style="width: 30%">打卡次数</th>
+      <th style="width: 20%">打卡次数</th>
     </tr>
   </thead>
   <tbody>
     {% for record in page_obj.object_list %}
     <tr>
       <td>{{ record.sn|default:"" }}</td>
+      <td>{{ record.qq|default:"" }}</td>
       <td>{{ record.nick_name|default:"" }}</td>
-      <td><a href="javascript:void(0);" data-reveal-id="myModal">{{ record.count }}</a></td>
+      <td><a class="view_check_list" href="javascript:void(0);"
+          data-reveal-id="myModal"
+          data-sn="{{ record.sn|default:"" }}"
+          data-qq="{{ record.qq|default:"" }}"
+          data-nick_name="{{ record.nick_name|default:"" }}"
+          data-datetime_start="{{ datetime_start|date:"Y-m-d H:i" }}"
+          data-datetime_end="{{ datetime_end|date:"Y-m-d H:i" }}">
+          {{ record.count }}</a></td>
     </tr>
     {% endfor %}
   </tbody>
@@ -87,10 +97,46 @@
 
 
 <div id="myModal" class="reveal-modal" data-reveal>
-  <h2>Awesome. I have it.</h2>
-  <p class="lead">Your couch.  It is mine.</p>
-  <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
   <a class="close-reveal-modal">&#215;</a>
+  <div id="checkin_list"></div>
+
+<script id="checkin_list_template"  type="x-tmpl-mustache">
+<div class="row">
+<div class="large-12 columns">
+
+<table class="full-width">
+  <thead>
+    <tr>
+      <th style="width: 10%">编号</th>
+      <th style="width: 10%">QQ</th>
+      <th style="width: 20%">昵称</th>
+      <th style="width: 40%">书名</th>
+      <th style="width: 20%">打卡日期</th>
+    </tr>
+  </thead>
+  <tbody>
+
+{% verbatim %}
+{{#data}}
+    <tr>
+      <td>{{sn}}</td>
+      <td>{{qq}}</td>
+      <td>{{nick_name}}</td>
+      <td>{{book_name}}</td>
+      <td>{{posted_at}}</td>
+    </tr>
+{{/data}}
+{% endverbatim %}
+
+  </tbody>
+</table>
+
+</div>
+</div>
+    </script>
+
+</div>
+
 </div>
 
 
@@ -98,3 +144,39 @@
 
 
 {% endblock content %}
+
+
+{% block extra_js %}
+<script>
+  $(function(){
+
+    function loadCheckinList(data) {
+      var url = "{% url "api:qq:checkin_list" %}"
+      $.get(url, data, function(checkin_list) {
+        var template = $("#checkin_list_template").html();
+        var rendered = Mustache.render(template, {"data": checkin_list});
+        $("#checkin_list").html(rendered);
+      })
+    }
+
+    $(".view_check_list").on('click', function(){
+      var sn = $(this).data("sn");
+      var qq = $(this).data("qq");
+      var nick_name = $(this).data("nick_name");
+      var datetime_start = $(this).data("datetime_start");
+      var datetime_end = $(this).data("datetime_end");
+      var data = {
+        "sn": sn,
+        "qq": qq,
+        "nick_name": nick_name,
+        "datetime_start": datetime_start,
+        "datetime_end": datetime_end
+      };
+
+      console.debug(data);
+      loadCheckinList(data);
+    })
+
+  });
+</script>
+{% endblock extra_js %}
