--- a/chendian/templates/qq/record/checkin.html
+++ b/chendian/templates/qq/record/checkin.html
@@ -3,94 +3,141 @@
 {% block title %}打卡记录 - {{ super }} {% endblock title %}
 
 {% block content %}
-  <h1>打卡记录</h1>
+<h1>打卡记录</h1>
+
+
+  {% include "qq/filter_form.html" %}
+
+  {% include "page.html" %}
 
 
   <div class="row">
-  <form>
-    <div class="small-12 columns">
-      <div class="row">
-        <div class="small-3 columns">
-          <label class="inline">选择
-          <select name="filter_by" class="inline">
-            <option value="sn"
-            {% if request.GET.filter_by == "sn" %} selected {% endif %}
-            >编号</option>
-            <option value="qq"
-            {% if request.GET.filter_by == "qq" %} selected {% endif %}
-            >QQ</option>
-            <option value="nick_name"
-            {% if request.GET.filter_by == "nick_name" %} selected {% endif %}
-            >昵称</option>
-          </select>
-          </label>
-      </div>
-        <div class="small-3 columns">
-          <label class="inline">值
-            <input type="number" name="filter_value" placeholder="value"
-            value="{{ request.GET.filter_value }}"
-            >
-          </label>
-        </div>
-        <div class="small-3 columns">
-          <label class="inline">开始时间
-            <input type="text" name="datetime_start" id="datetime_start"
-            value="{{ datetime_start|date:"Y-m-d H:i" }}"
-            >
-          </label>
-        </div>
-          <div class="small-3 columns">
-            <label class="inline">结束时间
-              <input type="text" name="datetime_end" id="datetime_end"
-                value="{{ datetime_end|date:"Y-m-d H:i" }}"
-              >
-            </label>
-        </div>
-      </div>
-    <div class="row">
-        <div class="small-3 columns">
-          <input type="submit" class="button tiny" value="过滤">
-          <a class="button tiny secondary" href="{{ request.path }}">取消</a>
-      </div>
+    <div class="large-12 columns">
+      <table class="full-width">
+        <thead>
+          <tr>
+            <th style="width: 10%">编号</th>
+            <th style="width: 10%">QQ</th>
+            <th style="width: 10%">昵称</th>
+            <th style="width: 40%">书名</th>
+            <th style="width: 20%">打卡日期</th>
+            <th style="width: 10%">操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for record in page_obj.object_list %}
+          <tr>
+            <td>{{ record.sn|default:"" }}</td>
+            <td>{{ record.qq|default:"" }}</td>
+            <td>{{ record.nick_name|default:"" }}</td>
+            <td>{{ record.book_name|default:"" }}</td>
+            <td>{{ record.posted_at|date:"Y-m-d H:i:s" }}</td>
+            <td>
+              <a class="edit_record" href="javascript: void(0);"
+                data-reveal-id="edit_modal"
+                data-id="{{ record.pk }}">修正</a>
+              <a class="delete_record" href="javascript: void(0);" data-id="{{ record.sn }}">删除</a>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
-    </div>
-    </div>
-  </form>
   </div>
 
 
-{% include "page.html" %}
+  {% include "page.html" %}
 
 
-<div class="row">
-<div class="large-12 columns">
-<table class="full-width">
-  <thead>
-    <tr>
-      <th style="width: 10%">编号</th>
-      <th style="width: 10%">QQ</th>
-      <th style="width: 20%">昵称</th>
-      <th style="width: 40%">书名</th>
-      <th style="width: 20%">打卡日期</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for record in page_obj.object_list %}
-    <tr>
-      <td>{{ record.sn|default:"" }}</td>
-      <td>{{ record.qq|default:"" }}</td>
-      <td>{{ record.nick_name|default:"" }}</td>
-      <td>{{ record.book_name|default:"" }}</td>
-      <td>{{ record.posted_at }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+  <div id="edit_modal" class="reveal-modal" data-reveal>
+    <a class="close-reveal-modal">&#215;</a>
+    <div id="edit_form"></div>
+
+    <script id="edit_form_template"  type="x-tmpl-mustache">
+      <form action="#" id="edit_form_post">
+        {% csrf_token %}
+
+      {% verbatim %}
+        <div class="row">
+          <p>原始聊天记录：<textarea rows="3" readonly disable>{{raw_msg}}</textarea></p>
+
+            <label>编号
+              <input type="number" name="sn" value="{{sn}}">
+            </label>
+            <label>QQ
+              <input type="text" name="qq" value="{{qq}}">
+            </label>
+            <label>昵称
+              <input type="text" name="nick_name" value="{{nick_name}}">
+            </label>
+            <label>书名
+              <input type="text" name="book_name" value="{{book_name}}">
+            </label>
+            <label>读后感
+              <textarea rows="3" name="think">{{think}}</textarea>
+            </label>
+        </div>
+
+        <div class="row">
+        <a href="javascript: void(0);"
+           class="button tiny" id="post_edit_form" data-id="{{id}}">更新</a>
+        </div>
+        {% endverbatim %}
+
+        <script>
+        // post form
+        $("#post_edit_form").on("click", function() {
+          var id = $(this).data("id");
+          var jsonData = {}
+          $("#edit_form_post").serializeArray().map(function(item) {
+            jsonData[item.name] = item.value;
+          });
+          jsonData = JSON.stringify(jsonData);
+          var url = "{% url "api:qq:checkin_detail" 0 %}".replace("0", id);
+          $.ajax({
+            type: "PUT",
+            url: url,
+            data: jsonData,
+            dataType: "json",
+            contentType : "application/json",
+            success: function(data) {
+              location.reload();
+            }
+          });
+        });
+        </script>
+
+    </form>
+  </script>
 </div>
-</div>
 
 
-{% include "page.html" %}
+  {% endblock content %}
 
 
-{% endblock content %}
+
+  {% block extra_js %}
+  <script>
+    $(function(){
+
+      // 载入 form
+      function loadEditForm(id) {
+        var url = "{% url "api:qq:checkin_detail" 0 %}".replace("0", id);
+        $.get(url, function(record) {
+          var template = $("#edit_form_template").html();
+          var rendered = Mustache.render(template, record);
+          $("#edit_form").html(rendered);
+        });
+      };
+
+      // modal
+      $(".edit_record").on("click", function() {
+        var id = $(this).data("id");
+        loadEditForm(id);
+        $("#edit_modal").foundation("reveal", "open");
+      });
+
+
+    });
+  </script>
+  {% endblock extra_js %}
