--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -37,7 +37,7 @@
               </ul>
               <ul class="left">
                 <li class="divider"></li>
-                <li><a href="#">导入聊天记录</a></li>
+                <li><a href="{% url "qq:import_list" %}">导入聊天记录</a></li>
               </ul>
               <ul class="right">
                 <li class="divider"></li>
