change import table

--- a/chendian/templates/qq/import.html
+++ b/chendian/templates/qq/import.html
@@ -34,7 +34,7 @@
           <tr>
             <th style="width: 10%">ID</th>
             <th style="width: 10%">状态</th>
-            <th style="width: 10%">导入记录数</th>
+            <th style="width: 10%">解析记录数</th>
             <th style="width: 20%">添加日期</th>
             <th style="width: 20%">更新日期</th>
           </tr>
