--- a/chendian/templates/page.html
+++ b/chendian/templates/page.html
@@ -3,22 +3,28 @@
 {% if is_paginated %}
 <div class="row">
 
-<ul class="pagination">
+<ul class="pager">
   {% if page_obj.has_previous %}
-  <li class="arrow"><a href="{% page_url page_obj.previous_page_number %}">&laquo;</a></li>
+  <li class="previous">
+    <a href="{% page_url page_obj.previous_page_number %}">
+      <span aria-hidden="true">&larr;</span>上一页</a>
+  </li>
   {% else %}
-  <li class="arrow unavailable"><a href="">&laquo;</a></li>
+  <li class="previous disabled">
+    <a href="#"><span aria-hidden="true">&larr;</span>上一页</a>
+  </li>
   {% endif %}
 
-  {# <li class="current"><a href="">1</a></li> #}
   <li>{{ page_obj.number }}/{{ page_obj.paginator.num_pages }}</li>
-  {# <li><a href="">2</a></li> #}
-  {# <li class="unavailable"><a href="">&hellip;</a></li> #}
 
   {% if page_obj.has_next %}
-  <li class="arrow"><a href="{% page_url page_obj.next_page_number %}">&raquo;</a></li>
+  <li class="next">
+    <a href="{% page_url page_obj.next_page_number %}">下一页<span aria-hidden="true">&rarr;</span></a>
+  </li>
   {% else %}
-  <li class="arrow unavailable"><a href="">&raquo;</a></li>
+  <li class="next disabled">
+    <a href="#">下一页<span aria-hidden="true">&rarr;</span></a>
+  </li>
   {% endif %}
 
 </ul>
