--- a/chendian/templates/qq/analysis/group_by_sn.html
+++ b/chendian/templates/qq/analysis/group_by_sn.html
@@ -13,8 +13,7 @@
 
 
   <div class="row">
-    <div class="large-12 columns">
-      <table class="full-width">
+      <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
             <th style="width: 20%">编号</th>
@@ -44,15 +43,20 @@
   </div>
 
 
-  <div id="myModal" class="reveal-modal" data-reveal>
-    <a class="close-reveal-modal">&#215;</a>
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+    aria-hidden="true" >
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">打卡记录</h4>
+      </div>
+
+      <div class="modal-body">
     <div id="checkin_list"></div>
 
     <script id="checkin_list_template"  type="x-tmpl-mustache">
-      <div class="row">
-      <div class="small-12 columns">
-
-      <table class="full-width">
+      <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
           <th style="width: 10%">编号</th>
@@ -79,10 +83,10 @@
     </tbody>
   </table>
 
-  </div>
-  </div>
   </script>
 
+  </div>
+  </div>
 </div>
 
 {% include "page.html" %}
@@ -98,7 +102,7 @@
     // 载入详细的打卡情况
     function loadCheckinList(data) {
       var url = "{% url "api:qq:checkin_list" %}"
-      $("#checkin_list").html("");
+      $("#checkin_list").html("loading....");
       $.get(url, data, function(checkin_list) {
         var template = $("#checkin_list_template").html();
         var rendered = Mustache.render(template, {"data": checkin_list});
@@ -121,9 +125,8 @@
         "datetime_end": datetime_end
       };
 
-      console.debug(data);
       loadCheckinList(data);
-      $("#myModal").foundation("reveal", "open");
+      $("#myModal").modal("show");
     })
 
   });
