--- a/chendian/templates/qq/import.html
+++ b/chendian/templates/qq/import.html
@@ -6,18 +6,13 @@
 <h1>导入聊天记录</h1>
 
 <div class="row">
-  <form method="post" action="{% url "qq:upload" %}" enctype="multipart/form-data">
+  <form class="form-inline" method="post"
+    action="{% url "qq:upload" %}" enctype="multipart/form-data">
     {% csrf_token %}
-    <div class="small-12 columns">
-      <div class="row">
-        <div class="small-9 columns">
-            <input type="file" name="text" placeholder="value" required>
-        </div>
-        <div class="small-3 columns">
-          <input type="submit" class="button tiny" value="上传">
-        </div>
+      <div class="form-group">
+        <input class="form-control" type="file" name="text" placeholder="value" required>
       </div>
-    </div>
+        <input type="submit" class="btn btn-primary" value="上传">
   </form>
 </div>
 
@@ -28,8 +23,7 @@
 
 
   <div class="row">
-    <div class="large-12 columns">
-      <table class="full-width">
+      <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
             <th style="width: 10%">ID</th>
@@ -51,7 +45,6 @@
           {% endfor %}
         </tbody>
       </table>
-    </div>
   </div>
 
 
