--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -23,22 +23,23 @@
       <div class="container-fluid">
 
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+            data-target="#navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">沉淀书会后台管理</a>
         </div>
 
-      <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="divider"></li>
           <li><a href="{% url "qq:record_checkin_list" %}">打卡记录</a></li>
-          <li class="divider"></li>
           <li><a href="{% url "qq:analysis_group_by_sn_list" %}">统计分析</a></li>
-          <li class="divider"></li>
           <li><a href="{% url "qq:import_list" %}">导入聊天记录</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="divider"></li>
           <li><a href="#">退出</a></li>
         </ul>
       </div>
@@ -46,13 +47,8 @@
   </nav>
 
 
-
       <div class="container">
-        <div class="row">
-          {% block content %}
-
-          {% endblock content %}
-        </div>
+          {% block content %}{% endblock content %}
       </div>
 
     <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
