--- a/chendian/templates/qq/filter_form.html
+++ b/chendian/templates/qq/filter_form.html
@@ -22,14 +22,14 @@
         value="{{ request.GET.filter_value }}" >
     </div>
     <div class="form-group">
-      <label for="datetme_start">开始时间</label>
+      <label for="datetime_start">开始时间</label>
       <input class="form-control" type="text"
       name="datetime_start" id="datetime_start"
       value="{{ datetime_start|date:"Y-m-d H:i" }}"
       >
     </div>
     <div class="form-group">
-          <label for="datetme_end">结束时间</label>
+          <label for="datetime_end">结束时间</label>
           <input class="form-control" type="text" name="datetime_end"
             id="datetime_end" value="{{ datetime_end|date:"Y-m-d H:i" }}" >
         </div>
