--- a/chendian/templates/index.html
+++ b/chendian/templates/index.html
@@ -1,86 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %}打卡记录 - {{ super }} {% endblock title %}
+{% block title %}沉淀书会后台 - {{ super }} {% endblock title %}
 
 {% block content %}
-  <h1>打卡记录</h1>
+  <h1>沉淀书会后台</h1>
 
-
-<form>
-  <div class="row">
-    <div class="small-12 columns">
-      <div class="row">
-        <div class="small-3 columns">
-          <label>Label</label>
-          <input type="text" id="right-label" placeholder="Inline Text Input">
-        </div>
-        <div class="small-3 columns">
-          <label>Label</label>
-          <input type="text" id="right-label" placeholder="Inline Text Input">
-        </div>
-        <div class="small-3 columns">
-          <label>Label</label>
-          <input type="text" id="right-label" placeholder="Inline Text Input">
-        </div>
-        <div class="small-3 columns">
-          <label>Label</label>
-          <input type="text" id="right-label" placeholder="Inline Text Input">
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-2 columns">
-          <input type="submit" class="button tiny" value="查询">
-        </div>
-      </div>
-    </div>
-  </div>
-</form>
-
-
-
-<table>
-  <thead>
-    <tr>
-      <th width="200">Table Header</th>
-      <th>Table Header</th>
-      <th width="150">Table Header</th>
-      <th width="150">Table Header</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Content Goes Here</td>
-      <td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
-      <td>Content Goes Here</td>
-      <td>Content Goes Here</td>
-    </tr>
-    <tr>
-      <td>Content Goes Here</td>
-      <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
-      <td>Content Goes Here</td>
-      <td>Content Goes Here</td>
-    </tr>
-    <tr>
-      <td>Content Goes Here</td>
-      <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
-      <td>Content Goes Here</td>
-      <td>Content Goes Here</td>
-    </tr>
-  </tbody>
-</table>
-
-
-<ul class="pagination">
-  <li class="arrow unavailable"><a href="">&laquo;</a></li>
-  <li class="current"><a href="">1</a></li>
-  <li><a href="">2</a></li>
-  <li><a href="">3</a></li>
-  <li><a href="">4</a></li>
-  <li class="unavailable"><a href="">&hellip;</a></li>
-  <li><a href="">12</a></li>
-  <li><a href="">13</a></li>
-  <li class="arrow"><a href="">&raquo;</a></li>
-</ul>
-
+  <ul>
+    <li>...</li>
+    <li>...</li>
+    <li>...</li>
+    <li>...</li>
+  </ul>
 
 {% endblock content %}
