--- a/chendian/templates/qq/analysis/group_by_sn.html
+++ b/chendian/templates/qq/analysis/group_by_sn.html
@@ -16,10 +16,10 @@
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
-            <th style="width: 20%">编号</th>
-            <th style="width: 20%">QQ</th>
-            <th style="width: 40%">昵称</th>
-            <th style="width: 20%">打卡次数</th>
+            <th>编号</th>
+            <th>QQ</th>
+            <th>昵称</th>
+            <th>打卡次数</th>
           </tr>
         </thead>
         <tbody>
