--- a/chendian/templates/qq/record/checkin.html
+++ b/chendian/templates/qq/record/checkin.html
@@ -15,12 +15,12 @@
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
-            <th style="width: 10%">编号</th>
-            <th style="width: 10%">QQ</th>
-            <th style="width: 10%">昵称</th>
-            <th style="width: 40%">书名</th>
-            <th style="width: 20%">打卡日期</th>
-            <th style="width: 10%">操作</th>
+            <th>编号</th>
+            <th>QQ</th>
+            <th>昵称</th>
+            <th>书名</th>
+            <th>打卡日期</th>
+            <th>操作</th>
           </tr>
         </thead>
         <tbody>
