--- a/chendian/templates/qq/filter_form.html
+++ b/chendian/templates/qq/filter_form.html
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
       <label class="sr-only" for="filter_name">值</label>
-      <input class="form-control" type="number"
+      <input class="form-control" type="text"
         name="filter_value" placeholder="value"
         value="{{ request.GET.filter_value }}" >
     </div>
