--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="zh">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}沉淀书会{% endblock title %} </title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.datetimepicker.css" />
