--- a/chendian/templates/index.html
+++ b/chendian/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}沉淀书会后台 - {{ super }} {% endblock title %}
+{% block title %}沉淀书会后台 - {{ block.super }} {% endblock title %}
 
 {% block content %}
   <h1>沉淀书会后台</h1>
