--- a/chendian/templates/qq/import.html
+++ b/chendian/templates/qq/import.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}导入聊天记录 - {{ super }} {% endblock title %}
+{% block title %}导入聊天记录 - {{ block.super }} {% endblock title %}
 
 {% block content %}
 <h1>导入聊天记录</h1>
