--- a/chendian/templates/qq/record/checkin.html
+++ b/chendian/templates/qq/record/checkin.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load extra_tags %}
 
-{% block title %}打卡记录 - {{ super }} {% endblock title %}
+{% block title %}打卡记录 - {{ block.super }} {% endblock title %}
 
 {% block content %}
 <h1>打卡记录</h1>
