--- a/chendian/templates/qq/record/checkin.html
+++ b/chendian/templates/qq/record/checkin.html
@@ -112,7 +112,7 @@
       {% verbatim %}
           <div class="form-group">
             <label>原始聊天记录</label>
-            <textarea class="form-control" rows="3" readonly disable>{{raw_msg}}</textarea>
+            <textarea class="form-control" rows="3" readonly disabled>{{raw_msg}}</textarea>
           </div>
 
           <div class="form-group">
@@ -149,6 +149,7 @@
 
   </div>
   </div>
+</div>
 </div>
 
 
