--- a/chendian/templates/member/index.html
+++ b/chendian/templates/member/index.html
@@ -4,9 +4,17 @@
 {% block title %}成员管理 - {{ block.super }} {% endblock title %}
 
 {% block content %}
-<h1>成员管理
-  <a href="javascript: void(0);" class="label label-primary newMember">新增</a>
-</h1>
+
+<div class="row">
+  <h2>成员管理
+    <small><a href="javascript: void(0);" class="label label-primary newMember">新增</a></small>
+  </h2>
+
+  <div class="alert alert-warning alert-dismissible fade in" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+    <strong>发现未处理的新成员！</strong> <a href="{% url "member:new_member_list" %}">前去处理</a>
+  </div>
+</div>
 
 
 <div class="row">
