--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url "qq:record_checkin_list" %}">沉淀书会后台管理</a>
+          <a class="navbar-brand" href="/">沉淀书会后台管理</a>
         </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
