--- a/chendian/templates/qq/analysis/group_by_qq.html
+++ b/chendian/templates/qq/analysis/group_by_qq.html
@@ -97,11 +97,12 @@
       <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
-          <th style="width: 10%">编号</th>
-          <th style="width: 10%">QQ</th>
-          <th style="width: 20%">昵称</th>
-          <th style="width: 40%">书名</th>
-          <th style="width: 20%">打卡日期</th>
+          <th>编号</th>
+          <th>QQ</th>
+          <th>昵称</th>
+          <th>书名</th>
+          <th>感想</th>
+          <th>打卡日期</th>
         </tr>
       </thead>
       <tbody>
@@ -113,6 +114,7 @@
         <td>{{qq}}</td>
         <td>{{nick_name}}</td>
         <td>{{book_name}}</td>
+        <td>{{think}}</td>
         <td>{{posted_at}}</td>
         </tr>
         {{/data}}
