--- a/chendian/templates/qq/record/checkin.html
+++ b/chendian/templates/qq/record/checkin.html
@@ -57,6 +57,8 @@
               </a>
             </th>
 
+            <th>感想</th>
+
             {% sort_url_obj "posted_at" as posted_at_url %}
             <th><a href="{{ posted_at_url.new_url }}" class="{{ posted_at_url.sorting }}">打卡日期
               {% if posted_at_url.sorting == "desc" %}
@@ -76,6 +78,7 @@
             <td>{{ record.qq|default:"" }}</td>
             <td>{{ record.nick_name|default:"" }}</td>
             <td>{{ record.book_name|default:"" }}</td>
+            <td>{{ record.think|default:""|slice:":20" }}{% if record.think %}...{% endif %}</td>
             <td>{{ record.posted_at|date:"Y-m-d H:i:s" }}</td>
             <td>
               <a class="edit_record" href="javascript: void(0);"
