--- a/chendian/templates/qq/analysis/group_by_qq.html
+++ b/chendian/templates/qq/analysis/group_by_qq.html
@@ -97,6 +97,7 @@
       <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
+          <th>No.</th>
           <th>编号</th>
           <th>QQ</th>
           <th>昵称</th>
@@ -110,6 +111,7 @@
         {% verbatim %}
         {{#data}}
         <tr>
+        <td>{{n}}</td>
         <td>{{sn}}</td>
         <td>{{qq}}</td>
         <td>{{nick_name}}</td>
@@ -138,12 +140,19 @@
 <script>
   $(function(){
 
+    function addIndex(arr) {
+      for(var i=1; i<=arr.length; i++) {
+        arr[i-1]['n'] = i;
+      }
+    }
+
     // 载入详细的打卡情况
     function loadCheckinList(data) {
       var url = "{% url "api:qq:checkin_list" %}"
       $("#checkin_list").html("loading....");
       $.get(url, data, function(checkin_list) {
         var template = $("#checkin_list_template").html();
+        addIndex(checkin_list);
         var rendered = Mustache.render(template, {"data": checkin_list});
         $("#checkin_list").html(rendered);
       })
