--- a/chendian/templates/member/index.html
+++ b/chendian/templates/member/index.html
@@ -85,6 +85,7 @@
               </a>
             </th>
 
+            <th>备注</th>
             <th>操作</th>
           </tr>
         </thead>
@@ -94,6 +95,7 @@
             <td>{{ member.sn }}</td>
             <td>{{ member.qq }}</td>
             <td>{{ member.nick_name }}</td>
+            <td>{{ member.description|default:"" }}</td>
             <td>
               <a class="edit_record" href="javascript: void(0);"
                 data-reveal-id="edit_modal"
@@ -174,13 +176,11 @@
       {% verbatim %}
           <div class="form-group">
             <label for="editSN">编号</label>
-            <input class="form-control" type="number" name="sn" id="editSN" value="{{sn}}"
-            readonly disabled>
+            <input class="form-control" type="number" name="sn" id="editSN" value="{{sn}}">
           </div>
           <div class="form-group">
             <label for="editQQ">QQ</label>
-            <input class="form-control" type="text" name="qq" id="editQQ" value="{{qq}}"
-            readonly disabled>
+            <input class="form-control" type="text" name="qq" id="editQQ" value="{{qq}}" readonly>
           </div>
           <div class="form-group">
             <label for="editName">昵称</label>
