统计页面增加导出功能
ref #2

--- a/chendian/templates/qq/filter_form.html
+++ b/chendian/templates/qq/filter_form.html
@@ -38,5 +38,6 @@
         </div>
     <input class="btn btn-primary" type="submit" value="过滤">
     <a class="btn btn-default" href="{{ request.path }}">重置</a>
+    <a class="btn btn-info" href="{{ request.GET.urlencode|default:"?foo" }}&export=xlsx">导出</a>
   </form>
 </div>
