--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -38,6 +38,7 @@
         <ul class="nav navbar-nav">
           <li><a href="{% url "qq:record_checkin_list" %}">打卡记录</a></li>
           <li><a href="{% url "qq:analysis_group_by_qq_list" %}">统计分析</a></li>
+          <li><a href="{% url "book:book_list" %}">书籍管理</a></li>
           <li><a href="{% url "member:member_list" %}">成员管理</a></li>
           <li><a href="{% url "qq:import_list" %}">导入聊天记录</a></li>
         </ul>
