--- a/chendian/templates/qq/record/checkin.html
+++ b/chendian/templates/qq/record/checkin.html
@@ -188,6 +188,9 @@
         var id = $(this).data("id");
         var jsonData = {}
         $("#edit_form_post").serializeArray().map(function(item) {
+          if (item.name == 'sn') {
+            item.value = item.value || null;
+          };
           jsonData[item.name] = item.value;
         });
         jsonData = JSON.stringify(jsonData);
